Code refactored. GenericService renamed. Custom banner added to Spring startup routine.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,17 +2,18 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Spring Framework Guru</title>
+    <title>Chuck Norris Joke</title>
 </head>
 <body>
 
-<div>
+<h1>Chuck Norris Joke</h1>
+
     <!--/*@thymesVar id="joke" type="com.yasin.spring5jokesappv2.model.Joke"*/-->
-    <p th:text="${joke.joke}">Sacma</p>
+    <p th:text="${joke.joke}">jokes here </p>
 
     <!--/*@thymesVar id="joke" type="java.lang.String"*/-->
-    <p th:text="${joke2}">Sacma</p>
-</div>
+    <p th:text="${joke2}">jokes here </p>
+
 
 </body>
 </html>
